// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for azure 1`] = `
<Fragment>
  <div
    className="settings-definition"
  >
    <div
      className="settings-definition-left"
    >
      <label
        className="h3"
        htmlFor="azure.project"
      >
        settings.pr_decoration.binding.form.azure.project
        <MandatoryFieldMarker />
      </label>
      <div
        className="markdown small spacer-top"
      >
        <FormattedMessage
          defaultMessage="settings.pr_decoration.binding.form.azure.project.help"
          id="settings.pr_decoration.binding.form.azure.project.help"
        />
        <div
          className="spacer-top nowrap"
        >
          example
          : 
          <em>
            <strong>
              My Project
            </strong>
          </em>
        </div>
      </div>
    </div>
    <div
      className="settings-definition-right padded-top"
    >
      <input
        className="input-super-large big-spacer-top"
        id="azure.project"
        maxLength={256}
        name="azure.project"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="settings-definition"
  >
    <div
      className="settings-definition-left"
    >
      <label
        className="h3"
        htmlFor="azure.repository"
      >
        settings.pr_decoration.binding.form.azure.repository
        <MandatoryFieldMarker />
      </label>
      <div
        className="markdown small spacer-top"
      >
        <FormattedMessage
          defaultMessage="settings.pr_decoration.binding.form.azure.repository.help"
          id="settings.pr_decoration.binding.form.azure.repository.help"
        />
        <div
          className="spacer-top nowrap"
        >
          example
          : 
          <em>
            <strong>
              My Repository
            </strong>
          </em>
        </div>
      </div>
    </div>
    <div
      className="settings-definition-right padded-top"
    >
      <input
        className="input-super-large big-spacer-top"
        id="azure.repository"
        maxLength={256}
        name="azure.repository"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
  </div>
</Fragment>
`;

exports[`should render correctly for bitbucket 1`] = `
<Fragment>
  <div
    className="settings-definition"
  >
    <div
      className="settings-definition-left"
    >
      <label
        className="h3"
        htmlFor="bitbucket.repository"
      >
        settings.pr_decoration.binding.form.bitbucket.repository
        <MandatoryFieldMarker />
      </label>
      <div
        className="markdown small spacer-top"
      >
        <FormattedMessage
          defaultMessage="settings.pr_decoration.binding.form.bitbucket.repository.help"
          id="settings.pr_decoration.binding.form.bitbucket.repository.help"
        />
        <div
          className="spacer-top nowrap"
        >
          example
          : 
          <em>
            https://bb.company.com/projects/
            <strong>
              MY_PROJECT_KEY
            </strong>
            /repos/my-repository-slug/browse
          </em>
        </div>
      </div>
    </div>
    <div
      className="settings-definition-right padded-top"
    >
      <input
        className="input-super-large big-spacer-top"
        id="bitbucket.repository"
        maxLength={256}
        name="bitbucket.repository"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="settings-definition"
  >
    <div
      className="settings-definition-left"
    >
      <label
        className="h3"
        htmlFor="bitbucket.slug"
      >
        settings.pr_decoration.binding.form.bitbucket.slug
        <MandatoryFieldMarker />
      </label>
      <div
        className="markdown small spacer-top"
      >
        <FormattedMessage
          defaultMessage="settings.pr_decoration.binding.form.bitbucket.slug.help"
          id="settings.pr_decoration.binding.form.bitbucket.slug.help"
        />
        <div
          className="spacer-top nowrap"
        >
          example
          : 
          <em>
            https://bb.company.com/projects/MY_PROJECT_KEY/repos/
            <strong>
              my-repository-slug
            </strong>
            /browse
          </em>
        </div>
      </div>
    </div>
    <div
      className="settings-definition-right padded-top"
    >
      <input
        className="input-super-large big-spacer-top"
        id="bitbucket.slug"
        maxLength={256}
        name="bitbucket.slug"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
  </div>
</Fragment>
`;

exports[`should render correctly for bitbucket if an instance URL is provided 1`] = `
<Fragment>
  <div
    className="settings-definition"
  >
    <div
      className="settings-definition-left"
    >
      <label
        className="h3"
        htmlFor="bitbucket.repository"
      >
        settings.pr_decoration.binding.form.bitbucket.repository
        <MandatoryFieldMarker />
      </label>
      <div
        className="markdown small spacer-top"
      >
        <FormattedMessage
          defaultMessage="settings.pr_decoration.binding.form.bitbucket.repository.help"
          id="settings.pr_decoration.binding.form.bitbucket.repository.help"
        />
        <div
          className="spacer-top nowrap"
        >
          example
          : 
          <em>
            http://bbs.example.com/projects/
            <strong>
              MY_PROJECT_KEY
            </strong>
            /repos/my-repository-slug/browse
          </em>
        </div>
      </div>
    </div>
    <div
      className="settings-definition-right padded-top"
    >
      <input
        className="input-super-large big-spacer-top"
        id="bitbucket.repository"
        maxLength={256}
        name="bitbucket.repository"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="settings-definition"
  >
    <div
      className="settings-definition-left"
    >
      <label
        className="h3"
        htmlFor="bitbucket.slug"
      >
        settings.pr_decoration.binding.form.bitbucket.slug
        <MandatoryFieldMarker />
      </label>
      <div
        className="markdown small spacer-top"
      >
        <FormattedMessage
          defaultMessage="settings.pr_decoration.binding.form.bitbucket.slug.help"
          id="settings.pr_decoration.binding.form.bitbucket.slug.help"
        />
        <div
          className="spacer-top nowrap"
        >
          example
          : 
          <em>
            http://bbs.example.com/projects/MY_PROJECT_KEY/repos/
            <strong>
              my-repository-slug
            </strong>
            /browse
          </em>
        </div>
      </div>
    </div>
    <div
      className="settings-definition-right padded-top"
    >
      <input
        className="input-super-large big-spacer-top"
        id="bitbucket.slug"
        maxLength={256}
        name="bitbucket.slug"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
  </div>
</Fragment>
`;

exports[`should render correctly for bitbucketcloud 1`] = `
<Fragment>
  <div
    className="settings-definition"
  >
    <div
      className="settings-definition-left"
    >
      <label
        className="h3"
        htmlFor="bitbucketcloud.repository"
      >
        settings.pr_decoration.binding.form.bitbucketcloud.repository
        <MandatoryFieldMarker />
      </label>
      <div
        className="markdown small spacer-top"
      >
        <FormattedMessage
          defaultMessage="settings.pr_decoration.binding.form.bitbucketcloud.repository.help"
          id="settings.pr_decoration.binding.form.bitbucketcloud.repository.help"
        />
        <div
          className="spacer-top nowrap"
        >
          example
          : 
          <em>
            https://bitbucket.org/my-workspace/
            <strong>
              my-repository-slug
            </strong>
          </em>
        </div>
      </div>
    </div>
    <div
      className="settings-definition-right padded-top"
    >
      <input
        className="input-super-large big-spacer-top"
        id="bitbucketcloud.repository"
        maxLength={256}
        name="bitbucketcloud.repository"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
  </div>
</Fragment>
`;

exports[`should render correctly for github 1`] = `
<Fragment>
  <div
    className="settings-definition"
  >
    <div
      className="settings-definition-left"
    >
      <label
        className="h3"
        htmlFor="github.repository"
      >
        settings.pr_decoration.binding.form.github.repository
        <MandatoryFieldMarker />
      </label>
      <div
        className="markdown small spacer-top"
      >
        <FormattedMessage
          defaultMessage="settings.pr_decoration.binding.form.github.repository.help"
          id="settings.pr_decoration.binding.form.github.repository.help"
        />
        <div
          className="spacer-top nowrap"
        >
          example
          : 
          <em>
            https://github.com/
            <strong>
              sonarsource/sonarqube
            </strong>
          </em>
        </div>
      </div>
    </div>
    <div
      className="settings-definition-right padded-top"
    >
      <input
        className="input-super-large big-spacer-top"
        id="github.repository"
        maxLength={256}
        name="github.repository"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="settings-definition"
  >
    <div
      className="settings-definition-left"
    >
      <label
        className="h3"
        htmlFor="github.summary_comment_setting"
      >
        settings.pr_decoration.binding.form.github.summary_comment_setting
      </label>
      <div
        className="markdown small spacer-top"
      >
        <FormattedMessage
          defaultMessage="settings.pr_decoration.binding.form.github.summary_comment_setting.help"
          id="settings.pr_decoration.binding.form.github.summary_comment_setting.help"
        />
      </div>
    </div>
    <div
      className="settings-definition-right padded-top"
    >
      <div
        className="display-flex-center big-spacer-top"
      >
        <div
          className="display-inline-block text-top"
        >
          <Toggle
            name="github.summary_comment_setting"
            onChange={[Function]}
            value={true}
          />
        </div>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`should render correctly for github if an instance URL is provided 1`] = `
<Fragment>
  <div
    className="settings-definition"
  >
    <div
      className="settings-definition-left"
    >
      <label
        className="h3"
        htmlFor="github.repository"
      >
        settings.pr_decoration.binding.form.github.repository
        <MandatoryFieldMarker />
      </label>
      <div
        className="markdown small spacer-top"
      >
        <FormattedMessage
          defaultMessage="settings.pr_decoration.binding.form.github.repository.help"
          id="settings.pr_decoration.binding.form.github.repository.help"
        />
        <div
          className="spacer-top nowrap"
        >
          example
          : 
          <em>
            http://example.com/
            <strong>
              sonarsource/sonarqube
            </strong>
          </em>
        </div>
      </div>
    </div>
    <div
      className="settings-definition-right padded-top"
    >
      <input
        className="input-super-large big-spacer-top"
        id="github.repository"
        maxLength={256}
        name="github.repository"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="settings-definition"
  >
    <div
      className="settings-definition-left"
    >
      <label
        className="h3"
        htmlFor="github.summary_comment_setting"
      >
        settings.pr_decoration.binding.form.github.summary_comment_setting
      </label>
      <div
        className="markdown small spacer-top"
      >
        <FormattedMessage
          defaultMessage="settings.pr_decoration.binding.form.github.summary_comment_setting.help"
          id="settings.pr_decoration.binding.form.github.summary_comment_setting.help"
        />
      </div>
    </div>
    <div
      className="settings-definition-right padded-top"
    >
      <div
        className="display-flex-center big-spacer-top"
      >
        <div
          className="display-inline-block text-top"
        >
          <Toggle
            name="github.summary_comment_setting"
            onChange={[Function]}
            value={true}
          />
        </div>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`should render correctly for github if an instance URL is provided 2`] = `
<Fragment>
  <div
    className="settings-definition"
  >
    <div
      className="settings-definition-left"
    >
      <label
        className="h3"
        htmlFor="github.repository"
      >
        settings.pr_decoration.binding.form.github.repository
        <MandatoryFieldMarker />
      </label>
      <div
        className="markdown small spacer-top"
      >
        <FormattedMessage
          defaultMessage="settings.pr_decoration.binding.form.github.repository.help"
          id="settings.pr_decoration.binding.form.github.repository.help"
        />
        <div
          className="spacer-top nowrap"
        >
          example
          : 
          <em>
            https://github.com/
            <strong>
              sonarsource/sonarqube
            </strong>
          </em>
        </div>
      </div>
    </div>
    <div
      className="settings-definition-right padded-top"
    >
      <input
        className="input-super-large big-spacer-top"
        id="github.repository"
        maxLength={256}
        name="github.repository"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="settings-definition"
  >
    <div
      className="settings-definition-left"
    >
      <label
        className="h3"
        htmlFor="github.summary_comment_setting"
      >
        settings.pr_decoration.binding.form.github.summary_comment_setting
      </label>
      <div
        className="markdown small spacer-top"
      >
        <FormattedMessage
          defaultMessage="settings.pr_decoration.binding.form.github.summary_comment_setting.help"
          id="settings.pr_decoration.binding.form.github.summary_comment_setting.help"
        />
      </div>
    </div>
    <div
      className="settings-definition-right padded-top"
    >
      <div
        className="display-flex-center big-spacer-top"
      >
        <div
          className="display-inline-block text-top"
        >
          <Toggle
            name="github.summary_comment_setting"
            onChange={[Function]}
            value={true}
          />
        </div>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`should render correctly for gitlab 1`] = `
<Fragment>
  <div
    className="settings-definition"
  >
    <div
      className="settings-definition-left"
    >
      <label
        className="h3"
        htmlFor="gitlab.repository"
      >
        settings.pr_decoration.binding.form.gitlab.repository
        <MandatoryFieldMarker />
      </label>
      <div
        className="markdown small spacer-top"
      >
        <FormattedMessage
          defaultMessage="settings.pr_decoration.binding.form.gitlab.repository.help"
          id="settings.pr_decoration.binding.form.gitlab.repository.help"
        />
        <div
          className="spacer-top nowrap"
        >
          example
          : 
          <em>
            <strong>
              123456
            </strong>
          </em>
        </div>
      </div>
    </div>
    <div
      className="settings-definition-right padded-top"
    >
      <input
        className="input-super-large big-spacer-top"
        id="gitlab.repository"
        maxLength={256}
        name="gitlab.repository"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
  </div>
</Fragment>
`;

exports[`should render the monorepo field when the feature is supported 1`] = `
<Fragment>
  <div
    className="settings-definition"
  >
    <div
      className="settings-definition-left"
    >
      <label
        className="h3"
        htmlFor="azure.project"
      >
        settings.pr_decoration.binding.form.azure.project
        <MandatoryFieldMarker />
      </label>
      <div
        className="markdown small spacer-top"
      >
        <FormattedMessage
          defaultMessage="settings.pr_decoration.binding.form.azure.project.help"
          id="settings.pr_decoration.binding.form.azure.project.help"
        />
        <div
          className="spacer-top nowrap"
        >
          example
          : 
          <em>
            <strong>
              My Project
            </strong>
          </em>
        </div>
      </div>
    </div>
    <div
      className="settings-definition-right padded-top"
    >
      <input
        className="input-super-large big-spacer-top"
        id="azure.project"
        maxLength={256}
        name="azure.project"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="settings-definition"
  >
    <div
      className="settings-definition-left"
    >
      <label
        className="h3"
        htmlFor="azure.repository"
      >
        settings.pr_decoration.binding.form.azure.repository
        <MandatoryFieldMarker />
      </label>
      <div
        className="markdown small spacer-top"
      >
        <FormattedMessage
          defaultMessage="settings.pr_decoration.binding.form.azure.repository.help"
          id="settings.pr_decoration.binding.form.azure.repository.help"
        />
        <div
          className="spacer-top nowrap"
        >
          example
          : 
          <em>
            <strong>
              My Repository
            </strong>
          </em>
        </div>
      </div>
    </div>
    <div
      className="settings-definition-right padded-top"
    >
      <input
        className="input-super-large big-spacer-top"
        id="azure.repository"
        maxLength={256}
        name="azure.repository"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="settings-definition"
  >
    <div
      className="settings-definition-left"
    >
      <label
        className="h3"
        htmlFor="monorepo"
      >
        settings.pr_decoration.binding.form.monorepo
      </label>
      <div
        className="markdown small spacer-top"
      >
        <FormattedMessage
          defaultMessage="settings.pr_decoration.binding.form.monorepo.help"
          id="settings.pr_decoration.binding.form.monorepo.help"
          values={
            {
              "doc_link": <withAppStateContext(DocLink)
                to="/devops-platform-integration/azure-devops-integration/"
              >
                learn_more
              </withAppStateContext(DocLink)>,
            }
          }
        />
      </div>
    </div>
    <div
      className="settings-definition-right padded-top"
    >
      <div
        className="display-flex-center big-spacer-top"
      >
        <div
          className="display-inline-block text-top"
        >
          <Toggle
            name="monorepo"
            onChange={[Function]}
            value={false}
          />
        </div>
      </div>
    </div>
  </div>
</Fragment>
`;
